Bugfix -  Once reached to cell report via red cell link from the member detail page, the date range doesn't work; Change the exception email password

--- a/LandWeb/Views/CellReport/Index.cshtml
+++ b/LandWeb/Views/CellReport/Index.cshtml
@@ -39,7 +39,7 @@
         });
      });
 </script>
-@using (Html.BeginForm())
+@using (Html.BeginForm("Index", "CellReport", FormMethod.Post))
 {
     <div class="row">
         <div class="col-sm-4 top-field">From: @Html.TextBoxFor(m => m.From, "{0:MM/dd/yyy}", new { @id = "fromDate", @style="width:80px" })</div>
