--- a/LandWeb/Views/CellReport/ExportToFile.cshtml
+++ b/LandWeb/Views/CellReport/ExportToFile.cshtml
@@ -61,20 +61,16 @@
 <table class="labelTable" border="1">
     <tr>
         <td class="chodaeLabel" style="width:100px">모임장소</td>
-        <td colspan="3" style="width:300px">@Model.Report.cell_place</td>
+        <td colspan="4" style="width:300px">@Model.Report.cell_place</td>
         <td class="chodaeLabel" style="width:100px">새교인</td>
-        <td colspan="3" style="width:300px">@Model.Report.new_member</td>
+        <td colspan="4" style="width:300px">@Model.Report.new_member</td>
     </tr>
 </table>
 <br />
 <table class="labelTable" border="1">
     <tr>
-        <td class="chodaeLabel" style="width:100px">Memo</td>
-        <td colspan="7" style="width:700px">@Model.Report.memo</td>
-</tr>
-    <tr>
-        <td class="chodaeLabel" style="width:100px">요청사항</td>
-        <td colspan="7" style="width:700px">@Model.Report.request</td>
+        <td class="chodaeLabel" style="width:100px">사역신청</td>
+        <td colspan="9" style="width:700px">@Model.Report.request</td>
     </tr>
 </table>
 <br />
@@ -95,7 +91,10 @@
                                 불참사유
                             </th>
                             <th colspan="2">
-                                메모
+                                예배장소
+                            </th>
+                            <th colspan="2">
+                                주일출석 특이사항
                             </th>
                             <th>
                                 Cell
@@ -105,29 +104,39 @@
                         @foreach (var m in Model.Members)
                 {
 
-                            <tr>
-                                <td>
-                                    @m.last_name@m.first_name
-                                </td>
-                                <td>
-                                    @(m.sex ? "남" : "여")
+                        <tr>
+                            <td>
+                                @m.last_name@m.first_name
+                            </td>
+                            <td>
+                                @(m.sex ? "남" : "여")
 
-                                </td>
-                                <td>
-                                    @(m.attendance ? "O" : "X")
-                                </td>
-                                <td colspan="2">
-                                    @m.reason
-                                </td>
-                                <td colspan="2">
-                                    @m.memo
-                                </td>
-                                <td>
-                                    @m.cell
-                                </td>
-                            </tr>
+                            </td>
+                            <td>
+                                @(m.attendance ? "O" : "X")
+                            </td>
+                            <td colspan="2">
+                                @m.reason
+                            </td>
+                            <td colspan="2">
+                                @m.service_time_place_id
+                            </td>
+                            <td colspan="2">
+                                @m.memo
+                            </td>
+                            <td>
+                                @m.cell
+                            </td>
+                        </tr>
 
                         }
                     </table>
 
             }
+            <br /><br />
+                    <table class="labelTable" border="1">
+                        <tr>
+                            <td class="chodaeLabel" style="width:100px">특별 보고 사항</td>
+                            <td colspan="9" style="width:700px">@Model.Report.memo</td>
+                        </tr>
+                    </table>
