Show Service Place as text

--- a/LandWeb/Views/CellReport/Detail.cshtml
+++ b/LandWeb/Views/CellReport/Detail.cshtml
@@ -111,7 +111,7 @@
                             @m.reason
                         </td>
                         <td>
-                            @m.service_time_place_id
+                            @m.service_place
                         </td>
                         <td>
                             @m.memo
