--- a/LandWeb/Views/CellReport/ExportToFile.cshtml
+++ b/LandWeb/Views/CellReport/ExportToFile.cshtml
@@ -119,7 +119,7 @@
                                 @m.reason
                             </td>
                             <td colspan="2">
-                                @m.service_time_place_id
+                                @m.service_place
                             </td>
                             <td colspan="2">
                                 @m.memo
