--- a/LandWeb/Views/CellReport/Detail.cshtml
+++ b/LandWeb/Views/CellReport/Detail.cshtml
@@ -83,7 +83,7 @@
                             불참사유
                         </td>
                         <td>
-                            예배장소
+                            주일 예배장소
                         </td>
                         <td>
                             주일출석 특이사항
