--- a/LandWeb/Views/CellReport/ExportToFile.cshtml
+++ b/LandWeb/Views/CellReport/ExportToFile.cshtml
@@ -91,7 +91,7 @@
                                 불참사유
                             </th>
                             <th colspan="2">
-                                예배장소
+                                주일 예배장소
                             </th>
                             <th colspan="2">
                                 주일출석 특이사항
